# VPEQ

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_visual_studio.bat  build_xcode.sh
cmake/: dev.lnk
cmake/sources/: CMakeLists.txt
cmake/unit_tests/: CMakeLists.txt
host_projects/Garage_Band/Project.band/Alternatives/000/: DisplayState.plist  DisplayStateArchive  MetaData.plist  ProjectData
host_projects/Garage_Band/Project.band/Resources/: ProjectInformation.plist
host_projects/Reaper/: reaper.rpp  reaper.rpp-bak
host_projects/_test_songs/: two-feet-her-life.mp3.reapeaks
project_source/cmake/aax_cmake/: CMakeLists.txt
project_source/cmake/au_cmake/: CMakeLists.txt
project_source/cmake/unit_test/: CMakeLists.txt
project_source/cmake/vst_cmake/: CMakeLists.txt
project_source/mac/au/: Info.plist
project_source/resources/: PluginGUI.uidesc
project_source/resources/my_resources/: bg.kra-autosave.kra  bg.kra~  black_knob.knob  test.knob
project_source/resources/my_resources/bg/: bg.xcf
project_source/resources/my_resources/knob/: ableton_fader.knob  bg.kra  black_knob.knob  test.kra
project_source/source/CustomControls/: atomicops.h  customcontrols.cpp  customcontrols.h  customviews.cpp  customviews.h  readerwriterqueue.h
project_source/source/FFTW/: fftw3.h
project_source/source/PluginKernel/: guiconstants.h  pluginbase.cpp  pluginbase.h  plugincore.cpp  plugincore.h  plugindescription.h  plugingui.cpp  plugingui.h  pluginparameter.cpp  pluginparameter.h  pluginstructures.h
project_source/source/PluginObjects/: Filter.cpp  Filter.hpp  FreqResponseView.cpp  FreqResponseView.hpp  FrequencyResponseView.hpp  Headers.hpp  SimpleBiquad.cpp  SimpleBiquad.hpp  Utils.cpp  Utils.hpp  filters.h  fxobjects.cpp  fxobjects.h  headers.hpp  pch.hpp  test_SimpleBiquad.cpp  utils.hpp
project_source/source/aax_source/: AAXPluginDescribe.cpp  AAXPluginDescribe.h  AAXPluginGUI.cpp  AAXPluginGUI.h  AAXPluginParameters.cpp  AAXPluginParameters.h  AAXtoVSTGUIButtonState.h  AntiLogTaperDelegate.h  LogTaperDelegate.h  VoltOctaveTaperDelegate.h
project_source/source/au_source/: aufxplugin.cpp  aufxplugin.h  ausynthplugin.cpp  ausynthplugin.h
project_source/source/unit_tests/: test_Filter.cpp  test_SimpleBiquad.cpp  unit_tests_utils.hpp
project_source/source/vst_source/: channelformats.h  customparameters.cpp  customparameters.h  factory.cpp  vst3plugin.cpp  vst3plugin.h
scripts/: astyleMac.sh  astyleWin.bat  build_visual_studio.bat  build_xcode.sh  createZip.sh  download_sdk.sh  unit_test_successes_mac.sh
scripts/VPEQ/: README.txt
